client: use zgc